packages/core/src/components/rtk-message-view/rtk-message-view.css
@import '../../styles/reset.css';
@import '../../styles/scrollbar.css';
:host {
  @apply max-w-96;
}
.message-wrapper {
  @apply flex flex-row-reverse items-start gap-2;
  &.incoming {
    @apply flex-row;
  }
}
.message {
  @apply flex flex-col items-end;
}

.incoming {
  .message {
    @apply flex flex-col items-start;
  }
}

.header {
  @apply my-1;
  @apply self-end;
  @apply text-text-900;
  @apply text-text-sm font-semibold;
}
.incoming {
  .header {
    @apply self-start;
  }
}

.body {
  @apply flex flex-col;
  @apply min-w-24;
  @apply text-text-900 font-sans;
  @apply text-text-md leading-snug;
  @apply relative;
}

.bubble {
  @apply max-w-[90%] p-2;
  @apply bg-brand-500 text-text-on-brand border-brand-600 border-[1px] border-solid;
  @apply rounded-md;
}

.incoming {
  .bubble {
    @apply bg-background-800 text-text-900 border-background-600;
  }
}

.metadata {
  @apply mt-1 flex flex-row items-center gap-1;
  @apply self-end;
  @apply text-text-on-brand text-[11px];
}

.incoming {
  .metadata {
    @apply mt-1 flex flex-row items-center gap-1;
    @apply self-end;
    @apply text-text-800 text-[11px];
  }
}
.metadata-content {
  @apply flex flex-row items-center gap-1;
}

.avatar {
  @apply hidden;
}

rtk-menu {
  @apply absolute right-1 top-1 rounded-lg;

  rtk-icon {
    @apply h-4 w-4;
    @apply cursor-pointer;
  }
}

.actions {
  @apply bg-brand-300 border-brand-600 flex items-center justify-center border-[1px] border-solid p-1;
  @apply rounded-md border-none;
  rtk-icon {
    @apply h-4 w-4;
    @apply text-text-on-brand;
  }
}

.incoming {
  rtk-avatar {
    @apply bg-background-600 text-text-900;
  }
  .actions {
    @apply bg-background-1000 border-background-700;
  }
}

@media (min-width: 400px) {
  .avatar {
    @apply flex w-6;

    rtk-avatar {
      @apply text-text-xs h-6 w-6;
      @apply overflow-clip rounded-full;
    }
  }
}

@media (hover: hover) {
  rtk-menu {
    @apply invisible;
  }
  .body {
    &:hover {
      rtk-menu {
        @apply visible;
      }
    }
  }
}

